--- a/thesis/03-context.tex
+++ b/thesis/03-context.tex
@@ -1,1 +1,18 @@
-\input{03-context.md}
+\begin{markdown}
+
+# Context #
+... this needs some
+
+pohádka:
+
+* majority of nmt systems are sentence-level
+* document-level methods exist and are on the rise
+* seems like context helps
+* worries: bleu as a metric no longer credible
+* another research on adding context
+    - factored input
+	- multimodal translation
+	- multi-source translation
+	
+
+\end{markdown}
