--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -5,16 +5,13 @@
 \newacronym{san}{SAN}{Self-Attentive Network}
 \newacronym{ai}{AI}{Artificial Intelligence}
 \newacronym{mmt}{MMT}{Multimodal Machine Translation}
-\newacronym{wmt}{WMT}{Workshop of Machine Translation}
+\newacronym{wmt}{WMT}{Conference on Machine Translation}
 \newacronym{ml}{ML}{Machine Learning}
 \newacronym{lstm}{LSTM}{Long Short-Term Memory}
 \newacronym{gru}{GRU}{Gated Recurrent Unit}
-\newacronym{cv}{CV}{Computer Vision}
 \newacronym{relu}{ReLU}{Rectified Linear Unit}
 \newacronym{mt}{MT}{Machine Translation}
 \newacronym{ape}{APE}{Automatic MT Post-Editing}
-\newacronym{cca}{CCA}{Canonical Correlation Analysis}
-\newacronym{bpe}{BPE}{Byte-Pair Encoding}
 \newacronym{lm}{LM}{Language Model}
-\newacronym{dc}{DC}{Distance Correlation}
-\newacronym{sts}{STS}{Semantic Textual Similarity}
+\newacronym{oov}{OOV}{out-of-vocabulary}
+\newacronym{bpe}{BPE}{byte-pair encoding}
