--- a/thesis/01-intro.tex
+++ b/thesis/01-intro.tex
@@ -14,24 +14,18 @@ pohádka:
 
 \end{markdown}
 
-It is universally agreed that context plays a vital role in human
-communication.
+It is universally agreed that context plays a vital role in human communication.
 
-
-% při rozhovoru je kontext kromě toho, co bylo řečeno i to, kde, kdo s kým a za jakých okolností komunikuje. V případě korespondence
-% je kontext omezenější
-
-
+% při rozhovoru je kontext kromě toho, co bylo řečeno i to, kde, kdo s kým a za
+% jakých okolností komunikuje. V případě korespondence je kontext omezenější
 
 In this thesis, we present two case studies aimed on this phenomenon. In the
-first study, we provide additional context to a \gls{nmt} system and observe
-the changes in translation quality. In the other case study, we go the other
-way: we limit the context available to the decoder and examine the model
-behavior.
+first study, we provide additional context to a \gls{nmt} system and observe the
+changes in translation quality. In the other case study, we go the other way: we
+limit the context available to the decoder and examine the model behavior.
 
-
-This thesis is structured as follows. In Chapter \ref{chap:nmt}, we describe
-the basics of \gls{nmt} as well as recent advancements in the field. Chapter
+This thesis is structured as follows. In Chapter \ref{chap:nmt}, we describe the
+basics of \gls{nmt} as well as recent advancements in the field. Chapter
 \ref{chap:context} summarizes the scientific contributions exploring the
 influence of context in \gls{nmt} from different perspectives. We present two
 case studies focused on the importance of context in \gls{nmt} in Chapters
