added some acronyms

--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -15,3 +15,5 @@
 \newacronym{lm}{LM}{Language Model}
 \newacronym{oov}{OOV}{out-of-vocabulary}
 \newacronym{bpe}{BPE}{byte-pair encoding}
+\newacronym{nat}{NAT}{Non-Autoregressive NMT}
+\newacronym{ctc}{CTC}{Connectionist Temporal Classification}
