added some references

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,146 @@
+
+@inproceedings{gu2017nonautoregressive,
+  author    = {Jiatao Gu and
+               James Bradbury and
+               Caiming Xiong and
+               Victor O. K. Li and
+               Richard Socher},
+  title     = {Non-Autoregressive Neural Machine Translation},
+  booktitle = {6th International Conference on Learning Representations, {ICLR} 2018},
+  month=apr,
+  address = {Vancouver, BC, Canada},
+  year      = {2018},
+  url       = {https://openreview.net/forum?id=B1l8BtlCb},
+  timestamp = {Thu, 25 Jul 2019 14:25:57 +0200},
+}
+
+@inproceedings{lee2018deterministic,
+    author        = {Lee, Jason and Mansimov, Elman and Cho, Kyunghyun},
+    title         = {Deterministic Non-Autoregressive Neural Sequence Modeling by Iterative Refinement},
+    booktitle     = {Proceedings of the 2018 Conference on Empirical Methods in Natural Language Processing},
+    address       = {Brussels, Belgium},
+    month         = {November},
+    pages         = {1173--1182},
+    publisher     = {Association for Computational Linguistics},
+    url           = {http://www.aclweb.org/anthology/D18-1149},
+    year          = {2018}
+}
+
+@inproceedings{ghazvininejad2019mask,
+  title = "Mask-Predict: Parallel Decoding of Conditional Masked Language Models",
+  author = "Ghazvininejad, Marjan  and
+            Levy, Omer  and
+		    Liu, Yinhan  and
+			Zettlemoyer, Luke",
+  booktitle = "Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)",
+  month = nov,
+  year = "2019",
+  address = "Hong Kong, China",
+  publisher = "Association for Computational Linguistics",
+  url = "https://www.aclweb.org/anthology/D19-1633",
+  doi = "10.18653/v1/D19-1633",
+  pages = "6111--6120",
+}
+
+@article{mansimov2019generalized,
+  author    = {Elman Mansimov and
+               Alex Wang and
+               Kyunghyun Cho},
+  title     = {A Generalized Framework of Sequence Generation with Application to
+               Undirected Sequence Models},
+  journal   = {CoRR},
+  volume    = {abs/1905.12790},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1905.12790},
+  archivePrefix = {arXiv},
+  eprint    = {1905.12790},
+  timestamp = {Mon, 03 Jun 2019 13:42:33 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1905-12790.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{callison-burch-etal-2006-evaluating,
+    title = "Re-evaluating the Role of {B}leu in Machine Translation Research",
+    author = "Callison-Burch, Chris  and
+      Osborne, Miles  and
+      Koehn, Philipp",
+    booktitle = "11th Conference of the {E}uropean Chapter of the Association for Computational Linguistics",
+    month = apr,
+    year = "2006",
+    address = "Trento, Italy",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/E06-1032",
+}
+
+@inproceedings{mathur-etal-2020-tangled,
+    title = "Tangled up in {BLEU}: Reevaluating the Evaluation of Automatic Machine Translation Evaluation Metrics",
+    author = "Mathur, Nitika  and
+      Baldwin, Timothy  and
+      Cohn, Trevor",
+    booktitle = "Proceedings of the 58th Annual Meeting of the Association for Computational Linguistics",
+    month = jul,
+    year = "2020",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/2020.acl-main.448",
+    doi = "10.18653/v1/2020.acl-main.448",
+    pages = "4984--4997",
+    abstract = "Automatic metrics are fundamental for the development and evaluation of machine translation systems. Judging whether, and to what extent, automatic metrics concur with the gold standard of human evaluation is not a straightforward problem. We show that current methods for judging metrics are highly sensitive to the translations used for assessment, particularly the presence of outliers, which often leads to falsely confident conclusions about a metric{'}s efficacy. Finally, we turn to pairwise system ranking, developing a method for thresholding performance improvement under an automatic metric against human judgements, which allows quantification of type I versus type II errors incurred, i.e., insignificant human differences in system quality that are accepted, and significant human differences that are rejected. Together, these findings suggest improvements to the protocols for metric evaluation and system performance evaluation in machine translation.",
+}
+
+@article{reiter2018structured,
+author = {Reiter, Ehud},
+title = {A Structured Review of the Validity of BLEU},
+journal = {Computational Linguistics},
+volume = {44},
+number = {3},
+pages = {393-401},
+year = {2018},
+doi = {10.1162/coli\_a\_00322},
+URL = {https://doi.org/10.1162/coli_a_00322},
+eprint = {ttps://doi.org/10.1162/coli_a_00322},
+abstract = { The BLEU metric has been widely used in NLP for over 15 years to evaluate NLP systems, especially in machine translation and natural language generation. I present a structured review of the evidence on whether BLEU is a valid evaluation technique—in other words, whether BLEU scores correlate with real-world utility and user-satisfaction of NLP systems; this review covers 284 correlations reported in 34 papers. Overall, the evidence supports using BLEU for diagnostic evaluation of MT systems (which is what it was originally proposed for), but does not support using BLEU outside of MT, for evaluation of individual texts, or for scientific hypothesis testing. }
+}
+
+@inproceedings{bojar-etal-2010-tackling,
+    title = "Tackling Sparse Data Issue in Machine Translation Evaluation",
+    author = "Bojar, Ond{\v{r}}ej  and
+      Kos, Kamil  and
+      Mare{\v{c}}ek, David",
+    booktitle = "Proceedings of the {ACL} 2010 Conference Short Papers",
+    month = jul,
+    year = "2010",
+    address = "Uppsala, Sweden",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/P10-2016",
+    pages = "86--91",
+}
+
+@article{brown-etal-1993-mathematics,
+    title = "The Mathematics of Statistical Machine Translation: Parameter Estimation",
+    author = "Brown, Peter F.  and
+      Della Pietra, Stephen A.  and
+      Della Pietra, Vincent J.  and
+      Mercer, Robert L.",
+    journal = "Computational Linguistics",
+    volume = "19",
+    number = "2",
+    year = "1993",
+    url = "https://www.aclweb.org/anthology/J93-2003",
+    pages = "263--311",
+}
+
+@inproceedings{koehn-etal-2003-statistical,
+    title = "Statistical Phrase-Based Translation",
+    author = "Koehn, Philipp  and
+      Och, Franz J.  and
+      Marcu, Daniel",
+    booktitle = "Proceedings of the 2003 Human Language Technology Conference of the North {A}merican Chapter of the Association for Computational Linguistics",
+    year = "2003",
+    url = "https://www.aclweb.org/anthology/N03-1017",
+    pages = "127--133",
+}
+
 @inproceedings{gao-etal-2020-character,
     title = "Character-Level Translation with Self-attention",
     author = "Gao, Yingqiang  and
@@ -238,19 +381,6 @@
     pages         = {1304--1313},
     publisher     = {Association for Computational Linguistics},
     year          = {2018}
-}
-
-@article{bengio2003neural,
-    author        = {Bengio, Yoshua and Ducharme, R{\'e}jean and Vincent, Pascal and Jauvin, Christian},
-    title         = {A neural probabilistic language model},
-    journal       = {The Journal of Machine Learning Research},
-    address       = {Cambridge, MA, USA},
-    issn          = {1532-4435},
-    number        = {Feb},
-    pages         = {1137--1155},
-    publisher     = {MIT Press},
-    volume        = {3},
-    year          = {2003}
 }
 
 @inproceedings{bengio2007greedy,
